@@ -1,3 +1,7 @@
+2016-02-04  Patrick Eriksson  <patrick.eriksson@chalmers.se>
+
+	* Added ztan and frequency croppting. Started on L2.
+
 2016-02-02  Patrick Eriksson  <patrick.eriksson@chalmers.se>
 
 	* Mscripts_arts/q2_inv.m (subfun4se): Introduced different models
